# qgo

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
cmd/qgo/: main.go
internal/cli/: prompt.go
internal/config/: config.go
internal/database/: connection.go  query.go
pkg/dropdown/: dropdown.go
pkg/utils/: utils.go
src/: cli.rs  config.rs  database.rs  error.rs  main.rs
src/ui/: connection_manager.rs  mod.rs  prompts.rs  table_display.rs
