[package]
name = "qgo"
version = "0.1.0"
edition = "2021"
authors = ["Ishan Ravindu"]
description = "A command-line SQL client written in Rust with support for MySQL, PostgreSQL, and SQLite"
license = "MIT"

[[bin]]
name = "qgo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "chrono", "uuid", "any"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rustyline = "13.0"
crossterm = "0.27"
rpassword = "7.0"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
csv = "1.3"
console = "0.15"
dialoguer = "0.11"
